Do not include 'Connection: close' to 500 responses per default
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@586026 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.0 Alpha 6
 
+* Do not include "Connection: close" to 500 responses per default. 
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-121] new interface HeaderElementIterator
   Contributed by Andrea Selva <selva.andre at gmail.com>
 
