HTTPCORE-126: Improved HTTP message parsing * Ported ProtocolVersion, RequestLine and StatusLine parsing code to the new API
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@589374 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since 4.0 Alpha 6
 
+* [HTTPCORE-126] Improved HTTP message parsing API and optimized parser
+  implementations. 
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * Do not include "Connection: close" to 500 responses per default. 
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
