--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.0 Alpha 6
 
+* [HTTPCORE-128] Simplified injection of custom NIO connection implementations. 
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-126] Improved HTTP message parsing API and optimized parser
   implementations. 
   Contributed by Oleg Kalnichevski <olegk at apache.org>
