HTTPCORE-37: HttpParams beans
Contributed by Stojce Dimski <sdmiski at yahoo.it>
Reviewed by Oleg Kalnichevski


git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@593937 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.0 Alpha 6
 
+* [HTTPCORE-37] HttpParams beans
+  Contributed by Stojce Dimski <sdmiski at yahoo.it>
+
 * [HTTPCORE-128] Simplified injection of custom NIO connection implementations. 
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
