Initial port of HttpCore NIO to Java 1.5: use of generics
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@599808 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.0 Alpha 6
 
+* HttpCore NIO ported to Java 1.5.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-130] Fixed over-synchronization bug leading to a thread deadlock 
   condition in SSL IOEventDispatch implementations.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
