HttpCore NIOSSL classes moved to HttpCore NIO; NIOSSL module deleted
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@600151 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.0 Alpha 6
 
+* HttpCore NIOSSL classes moved to HttpCore NIO.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * HttpCore NIO ported to Java 1.5.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
