--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 Changes since 4.0 Alpha 6
 
+* [HTTPCORE-127] Improved API for lifecycle management of listening I/O
+  reactors. One can now suspend and resume listener endpoints.
+  Contributed by Asankha C. Perera <asankha at wso2.com>
+
 * [HTTPCORE-112] DefaultConnectionReuseStrategy interprets token sequences
   Contributed by Roland Weber <rolandw at apache.org>
 
