updated release notes
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@609109 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.0 Alpha 6
 
+* [HTTPCORE-134] all serialVersionUID attributes are private
+  Contributed by Roland Weber <rolandw at apache.org>
+
 * [HTTPCORE-133] Clone support for basic HTTP message elements and 
   non-streaming entities.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
