Replaced HTTP parameter linking with a simple child/parent stack
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@610464 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.0 Alpha 6
 
+* Replaced HTTP parameter linking with a simple child/parent stack.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-134] all serialVersionUID attributes are private
   Contributed by Roland Weber <rolandw at apache.org>
 
