HTTPCORE-141: Session request timeout in DefaultConnectingIOReactor invalidates the request.
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@613020 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -17,6 +17,10 @@ providing better test coverage, documentation and performance optimizations.
 Changelog:
 ----------
 
+* [HTTPCORE-141] Session request timeout in DefaultConnectingIOReactor
+  invalidates the request.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-137] DefaultHttpRequestFactory extended to support all methods 
   specified in RFC 2616 (except CONNECT).
   Contributed by Oleg Kalnichevski <olegk at apache.org>
