HTTPCORE-143: Ensure the underlying channel is closed if the session request is canceled or times out.
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@617846 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,7 +1,11 @@
 Changes since 4.0 Beta 1
 -------------------
 
-* [HTTPCORE-140] Fixed timeout handling in ThrottlingHttpServiceHandler
+* [HTTPCORE-143] Ensure the underlying channel is closed if the session 
+  request is canceled or times out.
+  Oleg Kalnichevski <olegk at apache.org> 
+
+* [HTTPCORE-140] Fixed timeout handling in ThrottlingHttpServiceHandler.
   Contributed by Lorenzo Moretti <moznerol at hotmail.com> and 
   Oleg Kalnichevski <olegk at apache.org> 
 
