--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,10 @@
 Changes since 4.0 Beta 1
 -------------------
 
+* [HTTPCORE-147] Improved asynchronous server and client HTTP protocol 
+  handler implementations.
+  Sam Berlin <sberlin at gmail.com> 
+
 * [HTTPCORE-143] Ensure the underlying channel is closed if the session 
   request is canceled or times out.
   Oleg Kalnichevski <olegk at apache.org> 
