--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,10 @@
 Changes since 4.0 Beta 1
 -------------------
 
+* [HTTPCORE-147] Fixed handling of requests with partially consumed content
+  in ThrottlingHttpServiceHandler.
+  Oleg Kalnichevski <olegk at apache.org> 
+
 * [HTTPCORE-92] ChunkEncoder splits input data larger than available space 
   in the session output buffer into smaller chunks instead of expanding 
   the buffer. 
