--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since 4.0 Beta 1
 -------------------
 
+* [HTTPCORE-157] ChunkedOutputStream#flush() now behaves consistently with the 
+  specification of OutputStream#flush().
+
 * [HTTPCORE-147] Fixed handling of requests with partially consumed content
   in ThrottlingHttpServiceHandler.
   Oleg Kalnichevski <olegk at apache.org> 
