Made HttpEntity#consumeContent(), ProducingNHttpentity#finish(), ConsumingNHttpEntity#finish() methods more consistent as they basically serve the same purpose. HttpEntity#consumeContent() is expected to be renamed to HttpEntity#finish() in the next major release
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@645824 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -3,6 +3,7 @@ Changes since 4.0 Beta 1
 
 * [HTTPCORE-157] ChunkedOutputStream#flush() now behaves consistently with the 
   specification of OutputStream#flush().
+  Oleg Kalnichevski <olegk at apache.org> 
 
 * [HTTPCORE-147] Fixed handling of requests with partially consumed content
   in ThrottlingHttpServiceHandler.
