--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since 4.0 Beta 1
 -------------------
 
+* [HTTPCORE-150] Entity implementation that serializes a Java object
+  Contributed by Andrea Selva <selva.andrea at gmail.com>
+
 * [HTTPCORE-157] ChunkedOutputStream#flush() now behaves consistently with the 
   specification of OutputStream#flush().
   Oleg Kalnichevski <olegk at apache.org> 
