--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,8 @@
 Changes since 4.0 Beta 1
 -------------------
+* Fixed bug in SharedInputBuffer that caused input events to be
+  incorrectly suspended.
+  Contributed by Asankha C. Perera <asankha at wso2.com>
 
 * [HTTPCORE-150] Entity implementation that serializes a Java object
   Contributed by Andrea Selva <selva.andrea at gmail.com>
