fix two bugs w/ FileContentDecoder.transfer.  a) if data was buffered in SessionInputBuffer, arbitrary parts of the file got overwritten  b) attempts to write beyond the length of the file silently failed, leading to easy spinning.
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@665886 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,15 @@
 Changes since 4.0 Beta 1
 -------------------
+* Changed behavior of IdentityDecoder & LengthDelimitedDecoder to throw
+  an IOException if data is attempted to be written beyond the length
+  of a FileChannel.  Previously would write nothing.
+  Sam Berlin <sberlin at apache.org>
+
+* Fixed bug in LengthDelimitedDecoder & IdentityDecoder that caused transfers
+  to a FileChannel to overwrite arbitrary parts of the file, if data was
+  buffered in SessionInputBuffer.
+  Sam Berlin <sberlin at apache.org>
+
 * Fixed concurrency bug in the ThrottlingHttpServerHandler protocol handler.
   Oleg Kalnichevski <olegk at apache.org> 
 
