--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,9 @@
+Changes since 4.0 Beta2
+-------------------
+
+* [HTTPCORE-165] Improved handling of CancelledKeyException in I/O reactors
+  Contributed by Oleg Kalnichevski <olegk at apache.org> 
+
 Release 4.0 Beta 2
 -------------------
 
