--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,10 @@
 Changes since 4.0 Beta2
 -------------------
 
+* [HTTPCORE-167] Fixed handling the end of stream (EOF) condition in the #isStale() 
+  check of blocking HTTP connections.
+  Contributed by Oleg Kalnichevski <olegk at apache.org> 
+
 * [HTTPCORE-166] NIO reactors now maintain an audit log of fatal exceptions,
   which can be used to examine the cause and problems experienced during 
   the shutdown process.
