--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since 4.0 Beta 2
 -------------------
 
+* [HTTPCORE-170] Fixed race condition in SharedOutputBuffer.
+  Contributed by Jason Walton <Jason.Walton at alcatel-lucent.com>
+
 * [HTTPCORE-169] Fixed bug causing connecting I/O reactors to shut down due to
   ClosedChannelException if a pending session request is cancelled before the new
   channel has been registered with the selector.
