CancelledKeyException thrown in BaseIOReactor#validate() no longer causes a premature I/O reactor shutdown.
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@692638 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,10 @@
 Changes since 4.0 Beta 2
 -------------------
 
+* CancelledKeyException thrown in BaseIOReactor#validate() no longer causes 
+  a premature I/O reactor shutdown. 
+  Contributed by Oleg Kalnichevski <olegk at apache.org> 
+
 * [HTTPCORE-172] Added #close() method to SharedInputBuffer and 
   SharedOutputBuffer. The purpose of the new method is to close the buffer 
   in case of normal / orderly termination of the underlying HTTP connection. 
