HTTPCORE-174: Position is incremented twice in ContentLengthInputStream#skip(long) Contributed by Ildar Safarov <ildar.safarov at gmail.com> Reviewed by Oleg Kalnichevski
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@702592 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since 4.0 Beta 2
 -------------------
 
+* [HTTPCORE-174] Position is incremented twice in ContentLengthInputStream#skip(long) 
+  Contributed by Ildar Safarov <ildar.safarov at gmail.com> 
+
 * [HTTPCORE-125] OSGi bundle containing HttpCore & HttpCore NIO jars. 
   Contributed by Oleg Kalnichevski <olegk at apache.org> 
 
