HTTPCORE-173: Tolerate missing closing chunk if the chunk coded content is terminated by the end of stream (EOF) condition
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@702599 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,10 @@
 Changes since 4.0 Beta 2
 -------------------
 
+* [HTTPCORE-173] Tolerate missing closing chunk if the chunk coded content 
+  is terminated by the end of stream (EOF) condition.
+  Contributed by Oleg Kalnichevski <olegk at apache.org> 
+
 * [HTTPCORE-174] Position is incremented twice in ContentLengthInputStream#skip(long) 
   Contributed by Ildar Safarov <ildar.safarov at gmail.com> 
 
