--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,11 @@
 Changes since 4.0 Beta 3
 -------------------
 
+* [HTTPCORE-180] Fixed NPE in standard I/O event dispatchers when 
+  IOEventDispatch#disconnected fires before the session was fully initialized 
+  (IOEventDispatch#connected was not called).
+  Contributed by Oleg Kalnichevski <olegk at apache.org> 
+
 * [HTTPCORE-175] Chunk decoders no longer accept truncated chunks as valid input.
   Contributed by Oleg Kalnichevski <olegk at apache.org> 
 
