* SSLIOSession#isAppOutputReady and SSLIOSession#isAppInputReady no longer ignore the application event mask causing I/O event notifications for unrequested type of events
* Fixed incorrect handling of end-of-stream condition in the SSLIOSession#readPlain method (follow-up to HTTPCORE-193)


git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@771126 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,10 @@
 Changes since 4.0
 -------------------
 
+* SSLIOSession#isAppOutputReady and SSLIOSession#isAppInputReady no longer ignore the application 
+  event mask causing I/O event notifications for unrequested type of events.  
+  Contributed by Oleg Kalnichevski <olegk at apache.org> 
+
 * [HTTPCORE-155] Compatibility mode with IBM JRE and other JREs with naive (broken) implementation 
   of SelectionKey.
   Cotributed by Marc Beyerle <marc.beyerle at de.ibm.com> and Oleg Kalnichevski <olegk at apache.org> 
