HTTPCORE-198: CONNECT request includes Host header for HTTP 1.1 connections
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@781111 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since 4.0
 -------------------
 
+* [HTTPCORE-198] CONNECT request includes Host header for HTTP 1.1 connections.
+  Contributed by Oleg Kalnichevski <olegk at apache.org> 
+
 * [HTTPCORE-196] SSLIOSession now unwraps encrypted data more aggressively eliminating long
   pauses when receiving data over non-blocking connections.  
   Contributed by Oleg Kalnichevski <olegk at apache.org> 
