HTTPCORE-199: ContentInputStream implements InputStream#available()
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@791558 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since 4.0.1
 -------------------
 
+* [HTTPCORE-199] ContentInputStream implements InputStream#available().
+  Contributed by Oleg Kalnichevski <olegk at apache.org> 
+
 * [HTTPCORE-195] Truncated chunk-coded streams can now be tolerated by catching and discarding 
   TruncatedChunkException.
   Contributed by Oleg Kalnichevski <olegk at apache.org> 
